start font and cursor

--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400..700&display=swap');
 @import '../../styles/variables.scss';
 
 .navbar {
@@ -7,6 +8,7 @@
   width: 100%;
   top: 0;
   z-index: 1000;
+  font-family: "Edu VIC WA NT Beginner", cursive;
 
   ul {
     list-style: none;
@@ -19,6 +21,7 @@
       color: white;
       text-decoration: none;
       padding: 10px;
+      font-size: 28px;
       transition: color 0.3s;
 
       &:hover {
