--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -23,6 +23,7 @@
         text-decoration: none;
         padding: 30px;
         font-size: 22px;
+        font-weight: bold;
         cursor: none;
       }
     }
