navbar OK + cursor OK + button navbar OK + responsive navbar OK

--- a/src/styles/components/CurstomCursor.module.scss
+++ b/src/styles/components/CurstomCursor.module.scss
@@ -12,13 +12,13 @@
 }
 
 .hoverLink {
-  width: 20px; /* Taille réduite pour le curseur sur les liens */
+  width: 20px;
   height: 20px;
-  background-color: rgba(120, 24, 154, 0.3); /* Cercle transparent violet */
-  border: 1px solid rgb(255, 99, 71); /* Bordure rouge */
-  background-image: none; /* Supprime l'image SVG */
-  border-radius: 50%; /* Rend le curseur parfaitement circulaire */
-  transform: translate(-50%, -50%); /* Centrage correct du cercle */
+  background-color: rgba(120, 24, 154, 0.3);
+  border: 1px solid rgb(255, 99, 71);
+  background-image: none;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
   transition: width 0.2s ease, height 0.2s ease, background-color 0.2s ease, border 0.2s ease;
 }
 
