--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -85,7 +85,7 @@
     width: 120%;
     height: 120%;
     border-radius: 50%;
-    border: 2px solid rgba(181, 55, 226, 0.705);
+    border: 2px solid $cursor-color;
     box-sizing: border-box;
     z-index: -1;
     transition: border 0.3s ease;
