--- a/src/styles/components/Hero.module.scss
+++ b/src/styles/components/Hero.module.scss
@@ -1,2 +1,199 @@
 @import '../../styles/variables.scss';
 
+@font-face {
+  font-family: 'Welcome';
+  src: url('/fonts/Nectarine DEMO.ttf') format('truetype');
+}
+
+.hero {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  perspective: 1px;
+}
+
+@keyframes grow {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.welcome {
+  display: flex;
+  font-family: 'Welcome', sans-serif;
+  font-size: 200px;
+  color: $nav-text-color;
+  letter-spacing: 20px;
+  animation: grow 1.5s ease-out;
+  transition: opacity 0.8s ease-out;
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.bubbles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none;
+  transform-style: preserve-3d;
+}
+
+.bubble {
+  position: absolute;
+  background: radial-gradient(circle, rgba(254, 88, 62, 0.723), rgba(255, 98, 174, 0.322));
+  border-radius: 50%;
+  box-shadow: inset -10px -10px 15px rgba(249, 208, 253, 0.301), inset 10px 10px 20px rgba(255, 225, 251, 0.586), 0 5px 15px rgba(227, 63, 26, 0.524);
+  opacity: 0.8;
+  pointer-events: none;
+  transition: transform 0.1s ease-out;
+}
+
+.bubble1 {
+  width: 50px;
+  height: 50px;
+  top: 20%;
+  left: 10%;
+}
+
+.bubble2 {
+  width: 100px;
+  height: 100px;
+  top: 50%;
+  left: 60%;
+}
+
+.bubble3 {
+  width: 75px;
+  height: 75px;
+  top: 70%;
+  left: 30%;
+}
+
+.bubble4 {
+  width: 60px;
+  height: 60px;
+  top: 10%;
+  left: 80%;
+}
+
+.bubble5 {
+  width: 90px;
+  height: 90px;
+  top: 40%;
+  left: 20%;
+}
+
+.bubble6 {
+  width: 70px;
+  height: 70px;
+  top: 60%;
+  left: 50%;
+}
+
+.bubble7 {
+  width: 80px;
+  height: 80px;
+  top: 30%;
+  left: 40%;
+}
+
+.bubble8 {
+  width: 55px;
+  height: 55px;
+  top: 25%;
+  left: 65%;
+}
+
+.bubble9 {
+  width: 110px;
+  height: 110px;
+  top: 50%;
+  left: 10%;
+}
+
+.bubble10 {
+  width: 95px;
+  height: 95px;
+  top: 80%;
+  left: 55%;
+}
+
+.bubble11 {
+  width: 85px;
+  height: 85px;
+  top: 15%;
+  left: 35%;
+}
+
+.bubble12 {
+  width: 65px;
+  height: 65px;
+  top: 45%;
+  left: 75%;
+}
+
+.bubble13 {
+  width: 50px;
+  height: 50px;
+  top: 75%;
+  left: 20%;
+}
+
+.bubble14 {
+  width: 105px;
+  height: 105px;
+  top: 55%;
+  left: 70%;
+}
+
+.bubble15 {
+  width: 75px;
+  height: 75px;
+  top: 25%;
+  left: 85%;
+}
+
+.bubble16 {
+  width: 120px;
+  height: 120px;
+  top: 10%;
+  left: 50%;
+}
+
+.bubble17 {
+  width: 65px;
+  height: 65px;
+  top: 65%;
+  left: 85%;
+}
+
+.bubble18 {
+  width: 90px;
+  height: 90px;
+  top: 35%;
+  left: 25%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
