--- a/src/styles/components/About.module.scss
+++ b/src/styles/components/About.module.scss
@@ -3,55 +3,102 @@
 
 .about {
   font-family: 'Raleway', sans-serif;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  height: 100vh;
-  box-sizing: border-box;
-}
-
-.card {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 2rem; // Espace intérieur de la carte
-  overflow: hidden;
-  transition: transform 0.8s ease, filter 0.8s ease; // Transition plus longue pour une animation plus fluide
-  filter: blur(4px); // Flou par défaut
-  transform: scale(0.8); // Réduction par défaut
-  width: 85%; // Largeur de la carte
-  height: auto;
-  max-height: 300px; // Hauteur fixe pour la carte
-  z-index: 1; // Z-index pour la carte non-active
-}
-
-.card.active {
-  filter: blur(0); // Pas de flou sur la carte active
-  transform: scale(1.1); // Échelle normale pour la carte active
-  z-index: 2; // Z-index pour la carte active
-}
-
-.cardNumber {
-  font-size: 4rem;
-  font-weight: bold;
-  margin-right: 1rem;
-  color: $nav-text-color;
-}
-
-.cardContent {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   width: 100%;
+  padding: 0 2rem;
+  box-sizing: border-box;
+  cursor: none;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 1rem 0;
+  transition: transform 0.3s ease;
+}
+
+.section.active {
+  transform: scale(1.1);
+}
+
+.section:hover {
+  transform: scale(1.1);
+}
+
+.sectionNumber {
+  font-size: 3rem;
+  font-weight: bold;
+  color: $nav-text-color;
+  margin-bottom: 1rem;
+}
+
+.sectionContent {
+  width: 100%;
+}
+
+.sectionText {
+  font-size: 1.1rem;
+  color: black;
+  line-height: 1.6;
   text-align: justify;
 }
 
-.cardText {
-  font-size: 1.3rem;
-  color: black;
-  line-height: 1.4;
-  overflow: visible; /* Assure que tout le texte est visible */
+.separator {
+  width: 100%;
+  border: none;
+  border-bottom: 0.5px solid $nav-text-color;
+  margin: 2rem 0;
 }
+
+
+/* CV BUTTONS */
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  margin-top: 4rem;
+
+  a {
+    text-decoration: none;
+  }
+}
+
+.btn {
+  border: none;
+  width: 12em;
+  height: 4em;
+  border-radius: 3em;
+  border: 1px solid $nav-text-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  background: none;
+  cursor: none;
+  transition: all 450ms ease-in-out;
+}
+
+.text {
+  font-weight: 400;
+  color: $nav-text-color;
+  font-size: medium;
+}
+
+.btn:hover {
+  background: linear-gradient(0deg,#b293f0,#b4a0f5);
+  box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4),
+  inset 0px -4px 0px 0px rgba(249, 208, 253, 0.301),
+  0px 0px 0px 4px rgba(255, 225, 251, 0.586),
+  0px 0px 180px 0px #9917FF;
+  transform: translateY(-2px);
+}
+
+.btn:hover .text {
+  color: white;
+}
+
+
+
 
 
 
