--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,9 +9,11 @@ main {
 }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 10vh;
 }
+
