--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -27,7 +27,7 @@
 
     li {
       a {
-        color: $nav-text-color;
+        color: $nav-title-color;
         text-decoration: none;
         padding: 30px;
         font-size: 22px;
@@ -59,7 +59,7 @@
   left: 20px;
   width: 35px;
   height: 35px;
-  background-color: $nav-text-color;
+  background-color: $nav-title-color;
   border: none;
   border-radius: 50%;
   padding: 10px;
@@ -153,6 +153,19 @@
       width: 130%;
       height: 130%;
     }
+  }
+}
+
+.languageToggle {
+  background-color: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: none;
+  font-weight: bold;
+  color: $nav-title-color;
+
+  &:hover {
+    transform: scale(1.2);
   }
 }
 
