--- a/src/styles/components/About.module.scss
+++ b/src/styles/components/About.module.scss
@@ -1,12 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 @import '../../styles/variables.scss';
 
+@font-face {
+  font-family: 'Title';
+  src: url('/fonts/Nectarine DEMO.ttf') format('truetype');
+}
+
 .about {
   font-family: 'Raleway', sans-serif;
   width: 100%;
   padding: 0 2rem;
   box-sizing: border-box;
   cursor: none;
+}
+
+.aboutTitle {
+  font-family: 'Title', sans-serif;
+  font-size: 3rem;
+  color: $nav-title-color;
 }
 
 .section {
@@ -28,7 +39,7 @@
 .sectionNumber {
   font-size: 3rem;
   font-weight: bold;
-  color: $nav-text-color;
+  color: $nav-title-color;
   margin-bottom: 1rem;
 }
 
@@ -38,7 +49,7 @@
 
 .sectionText {
   font-size: 1.1rem;
-  color: black;
+  color: $text-color;
   line-height: 1.6;
   text-align: justify;
 }
@@ -46,10 +57,9 @@
 .separator {
   width: 100%;
   border: none;
-  border-bottom: 0.5px solid $nav-text-color;
+  border-bottom: 0.5px solid $nav-title-color;
   margin: 2rem 0;
 }
-
 
 /* CV BUTTONS */
 .buttonContainer {
@@ -68,7 +78,7 @@
   width: 12em;
   height: 4em;
   border-radius: 3em;
-  border: 1px solid $nav-text-color;
+  border: 1px solid $nav-title-color;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,7 +90,7 @@
 
 .text {
   font-weight: 400;
-  color: $nav-text-color;
+  color: $nav-title-color;
   font-size: medium;
 }
 
