--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,3 @@
-$nav-text-color: rgb(255, 110, 66);
+$nav-title-color: rgb(255, 110, 66);
+$text-color: rgb(110, 77, 77);
 $cursor-color: rgba(181, 55, 226, 0.705);
