--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -96,7 +96,6 @@
   }
 }
 
-
 @keyframes oscillate {
   0% {
     transform: rotate(0.5deg);
@@ -106,6 +105,27 @@
   }
   100% {
     transform: rotate(0.5deg);
+  }
+}
+
+.languageToggle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid $nav-title-color;
+  border-radius: 50%;
+  padding: 10px;
+  font-size: 18px;
+  cursor: none;
+  font-weight: bold;
+  color: $nav-title-color;
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: scale(1.1);
   }
 }
 
@@ -139,6 +159,12 @@
     }
   }
 
+  .languageToggle {
+    width: 40px;
+    height: 40px;
+    font-size: 14px;
+  }
+
   .navbar.hidden {
     top: -200px;
   }
@@ -153,19 +179,6 @@
       width: 130%;
       height: 130%;
     }
-  }
-}
-
-.languageToggle {
-  background-color: transparent;
-  border: none;
-  font-size: 18px;
-  cursor: none;
-  font-weight: bold;
-  color: $nav-title-color;
-
-  &:hover {
-    transform: scale(1.2);
   }
 }
 
@@ -202,6 +215,12 @@
       width: 130%;
       height: 130%;
     }
+  }
+
+  .languageToggle {
+    width: 35px;
+    height: 35px;
+    font-size: 12px;
   }
 }
 
