--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -1,2 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 @import '../../styles/variables.scss';
+
+@font-face {
+  font-family: 'Title';
+  src: url('/fonts/Nectarine DEMO.ttf') format('truetype');
+}
+
+.projects {
+  font-family: 'Raleway', sans-serif;
+  width: 100%;
+  box-sizing: border-box;
+  cursor: none;
+}
+
+.projectTitle {
+  font-family: 'Title', sans-serif;
+  font-size: 5rem;
+  color: $nav-title-color;
+  margin-bottom: -2rem;
+}
+
+.projectLine {
+  font-size: 1.5rem;
+  text-align: center;
+  color: $text-color;
+}
