--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,12 @@
+$body-bg-color: #f5f5f5;
 $nav-title-color: rgb(255, 110, 66);
 $text-color: rgb(110, 77, 77);
 $cursor-color: rgba(181, 55, 226, 0.705);
+
+$active-button-bg-color: rgba(155, 59, 190, 0.639);
+$border-btn-active-color: rgb(108, 34, 135);
+$active-button-text-color: #fff;
+$button-hover-not-active: rgba(255, 110, 66, 0.467);
+$button-hover-active: rgba(180, 55, 226, 0.492);
+
+$card-bg-color: #f5f5f5;
