--- a/src/styles/components/Hero.module.scss
+++ b/src/styles/components/Hero.module.scss
@@ -1,48 +1,52 @@
 @import '../../styles/variables.scss';
-
-@font-face {
-  font-family: 'Title';
-  src: url('/fonts/Nectarine DEMO.ttf') format('truetype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 
 .hero {
-  position: relative;
-  width: 100%;
-  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  perspective: 1px;
-}
+  padding: 50px;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  margin-top: 30vh; /* Ajout d'un léger espacement après la navbar */
 
-@keyframes grow {
-  from {
-    transform: scale(0);
-    opacity: 0;
+  .heroImageWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    .heroImage {
+      width: 80%;
+      max-width: 1000px;
+      height: auto;
+      object-fit: contain;
+      margin-bottom: 20px;
+    }
   }
-  to {
-    transform: scale(1);
-    opacity: 1;
+
+  .heroContent {
+    p {
+      font-size: 1.5rem;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .heroImage {
+      width: 70%;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .heroImage {
+      width: 90%;
+    }
   }
 }
 
-.welcome {
-  display: flex;
-  flex-direction: row;
-  font-family: 'Title', sans-serif;
-  font-size: 200px;
-  color: $nav-title-color;
-  letter-spacing: 20px;
-  animation: grow 1.5s ease-out;
-  transition: opacity 0.8s ease-out;
-  align-items: center;
-  margin-top: 20vh;
-}
 
-.fade-in {
-  opacity: 1;
-}
+
 
 
 
