--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -9,6 +9,13 @@
   z-index: 1000;
   font-family: "Raleway", sans-serif;
   transition: opacity 0.5s ease, transform 0.5s ease;
+  background-color: transparent;
+
+  &.background {
+    background-color: rgb(254, 244, 244);
+    left: 0;
+    right: 0;
+  }
 
   &.hidden {
     opacity: 0;
@@ -26,6 +33,8 @@
     box-sizing: border-box;
 
     li {
+      margin-right: 4rem;
+
       a {
         color: $nav-title-color;
         text-decoration: none;
@@ -42,12 +51,11 @@
     }
 
     .logo {
-      margin: 0 15px;
-
       img {
-        max-height: 30px;
+        max-height: 35px;
+        width: 55px;
         height: auto;
-        animation: oscillate 4s infinite ease-in-out;
+        margin-left: 2rem;
       }
     }
   }
@@ -56,7 +64,7 @@
 .showNavbarButton {
   position: fixed;
   top: 20px;
-  left: 20px;
+  left: 15px;
   width: 35px;
   height: 35px;
   background-color: $nav-title-color;
@@ -96,18 +104,6 @@
   }
 }
 
-@keyframes oscillate {
-  0% {
-    transform: rotate(0.5deg);
-  }
-  50% {
-    transform: rotate(-0.5deg);
-  }
-  100% {
-    transform: rotate(0.5deg);
-  }
-}
-
 .languageToggle {
   display: flex;
   align-items: center;
@@ -129,100 +125,30 @@
   }
 }
 
-// Petits écrans
+
+/* Responsive */
 @media (max-width: 768px) {
-  .navbar {
-    padding: 0.5%;
-
-    ul {
-      flex-direction: column;
-      align-items: center;
-    }
-
-    li {
-      margin: 8px 0; 
-      a {
-        padding: 15px;
-        font-size: 16px;
-      }
-    }
-
-    .logo {
-      margin: 0 15px;
-
-      img {
-        max-height: 30px;
-        width: 200px;
-        height: auto;
-        animation: oscillate 4s infinite ease-in-out;
-      }
-    }
+  .navbar ul {
+    flex-direction: column;
+    align-items: justify;
   }
 
-  .languageToggle {
-    width: 40px;
-    height: 40px;
-    font-size: 14px;
+  .navbar ul li {
+    margin: 1rem 0;
   }
 
-  .navbar.hidden {
-    top: -200px;
-  }
-
-  .showNavbarButton {
-    width: 50px;
-    height: 50px;
-
-    &::before {
-      top: -7px;
-      left: -7px;
-      width: 130%;
-      height: 130%;
-    }
+  .navbar .logo {
+    display: none;
   }
 }
 
-// Très petits écrans
-@media (max-width: 480px) {
-  .navbar {
-    padding: 0.5%;
-
-    ul {
-      flex-direction: column;
-      width: 100%;
-    }
-
-    li {
-      margin: 8px 0; 
-      a {
-        padding: 10px;
-        font-size: 14px;
-      }
-    }
-  }
-
-  .navbar.hidden {
-    top: -200px;
-  }
-
+@media (max-width: 820px) {
   .showNavbarButton {
-    width: 50px;
-    height: 50px;
-
-    &::before {
-      top: -7px;
-      left: -7px;
-      width: 130%;
-      height: 130%;
-    }
-  }
-
-  .languageToggle {
-    width: 35px;
-    height: 35px;
-    font-size: 12px;
+    top: 6.5%;
   }
 }
+
+
 
 
 
