--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -1,16 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 @import '../../styles/variables.scss';
-
-@font-face {
-  font-family: 'Title';
-  src: url('/fonts/Nectarine DEMO.ttf') format('truetype');
-}
 
 .projects {
   font-family: 'Raleway', sans-serif;
   width: 100%;
   box-sizing: border-box;
-  cursor: none;
+  margin-top: 25vh;
 }
 
 .projectTitle {
@@ -18,10 +12,136 @@
   font-size: 5rem;
   color: $nav-title-color;
   margin-bottom: -2rem;
+  text-align: center;
 }
 
 .projectLine {
   font-size: 1.5rem;
   text-align: center;
   color: $text-color;
+}
+
+
+/* PROJETCS */
+.fullProjects {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 4rem;
+}
+
+.buttonsContainer {
+  display: flex;
+  margin: 2rem;
+
+  button {
+    font-size: 1rem;
+    border: 1px solid $nav-title-color;
+    border-radius: 20px;
+    padding: 10px 20px;
+    margin-right: 1rem;
+    cursor: none;
+    background-color: transparent;
+    color: $nav-title-color;
+    transition: background-color 0.3s ease;
+
+    &.active {
+      background-color: $active-button-bg-color;
+      border: 1px solid $border-btn-active-color;
+      color: $active-button-text-color;
+
+      &:hover {
+        background-color: $button-hover-active;
+      }
+    }
+
+    &:not(.active):hover {
+      background-color: $button-hover-not-active;
+    }
+
+    @media (max-width: 480px) {
+      padding: 8px 12px;
+      font-size: 0.8rem;
+    }
+  }
+
+  @media (max-width: 1000px) {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.projectsContainer {
+  margin: 2rem;
+  overflow-x: scroll;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
+  max-width: 100%;
+
+  /* Scrollbar hidden styles */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
+  @media (max-width: 1000px) {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.projectsRow {
+  display: flex;
+  gap: 50px;
+
+  @media (max-width: 480px) {
+    gap: 30px;
+  }
+
+  @media (max-width: 1000px) {
+    flex-direction: column;
+  }
+}
+
+.projectCard {
+  width: 600px;
+  height: 350px;
+  border-radius: 15px;
+  overflow: hidden;
+  position: relative;
+  background-color: $card-bg-color;
+
+  @media (max-width: 768px) {
+    width: 300px;
+    height: 230px;
+  }
+
+  @media (max-width: 480px) {
+    width: 340px;
+    height: 240px;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+
+  .projectTag {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 0.9rem;
+
+    @media (max-width: 480px) {
+      font-size: 0.8rem;
+    }
+  }
 }
