--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,19 +1,11 @@
-html, body {
-  height: 100%;
-  margin: 0;
+body {
   cursor: none;
 }
 
-main {
-  min-height: 100vh;
-}
-
 section {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10vh;
 }
 
