--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -104,6 +104,12 @@
   }
 }
 
+.buttonText {
+  font-size: 0.75rem;
+  font-family: "Raleway", sans-serif;
+  color: white;
+}
+
 .languageToggle {
   display: flex;
   align-items: center;
