--- a/src/styles/components/About.module.scss
+++ b/src/styles/components/About.module.scss
@@ -108,7 +108,7 @@
   box-shadow: inset 0px 1px 0px 0px rgba(255, 255, 255, 0.4),
   inset 0px -4px 0px 0px rgba(249, 208, 253, 0.301),
   0px 0px 0px 4px rgba(255, 225, 251, 0.586),
-  0px 0px 180px 0px #9917FF;
+  0px 0px 180px 0px #9b27f5;
   transform: translateY(-2px);
 }
 
