--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -72,7 +72,7 @@
 }
 
 .projectsContainer {
-  margin: 2rem;
+  margin: 1.8rem;
   overflow-x: scroll;
   white-space: nowrap;
   display: flex;
@@ -106,42 +106,78 @@
   }
 }
 
-.projectCard {
-  width: 600px;
-  height: 350px;
-  border-radius: 15px;
-  overflow: hidden;
+.card {
   position: relative;
-  background-color: $card-bg-color;
-
-  @media (max-width: 768px) {
-    width: 300px;
-    height: 230px;
-  }
-
-  @media (max-width: 480px) {
-    width: 340px;
-    height: 240px;
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-  }
-
-  .projectTag {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-size: 0.9rem;
-
-    @media (max-width: 480px) {
-      font-size: 0.8rem;
-    }
-  }
+  width: 350px;
+  height: 250px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 20px;
+  display: flex;
+  padding: 10px 30px;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background-color: rgba(249, 230, 230, 0.497);
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.card:hover .overlay {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.cardBtn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-weight: 600;
+  padding: 10px 20px;
+  font-size: 16px;
+  transform: translate(-50%, -50%) scale(0);
+  background-color: #ffffff;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 999;
+  border: none;
+  opacity: 0;
+  transition: opacity 0.3s ease, transform 0.6s ease;
+}
+
+.card:hover .cardBtn {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.overlay::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  width: 100%;
+  height: 100%;
+  background-color: rgba(249, 230, 230, 0.497);
+  transition: transform 0.5s ease;
+}
+
+.card:hover .overlay::after {
+  transform: translate(-50%, -50%) scale(2);
+}
+
+
