--- a/src/styles/components/Navbar.module.scss
+++ b/src/styles/components/Navbar.module.scss
@@ -12,7 +12,7 @@
   background-color: transparent;
 
   &.background {
-    background-color: rgb(254, 244, 244);
+    background-color: $nav-bg-color;
     left: 0;
     right: 0;
   }
