--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$body-bg-color: #f5f5f5;
+$nav-bg-color: rgb(254, 244, 244);
 $nav-title-color: rgb(255, 110, 66);
 $text-color: rgb(110, 77, 77);
 $cursor-color: rgba(181, 55, 226, 0.705);
@@ -8,5 +8,3 @@ $border-btn-active-color: rgb(108, 34, 135);
 $active-button-text-color: #fff;
 $button-hover-not-active: rgba(255, 110, 66, 0.467);
 $button-hover-active: rgba(180, 55, 226, 0.492);
-
-$card-bg-color: #f5f5f5;
