--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -343,109 +343,31 @@
 }
 
 
-/* Nouveau bouton de fermeture avec une animation */
-.closePopupContainer {
+/* CLOSE BUTTON */
+.closePopup {
   position: absolute;
-  top: 20px; /* Ajuster selon les besoins */
-  right: 20px; /* Ajuster selon les besoins */
-  width: 100px;
-  height: 100px;
-  z-index: 10; /* Pour s'assurer que la croix reste au-dessus */
-  cursor: pointer;
-}
+  top: 0.6rem;
+  right: 0.6rem;
 
-.closePopupContainer .container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  border-radius: 50%;
-  height: 60px;
-  width: 60px;
-  animation: rotate_3922 1.2s linear infinite;
-  background-color: #9b59b6;
-  background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
-  transform: translate(-50%, -50%);
-}
+  button {
+    color: $nav-title-color;
+    background: none;
+    border: none;
+    padding: 12px 12px;
+    border-radius: 50px;
+    cursor: none;
 
-.closePopupContainer .container span {
-  position: absolute;
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  background-color: #9b59b6;
-  background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
-}
-
-.closePopupContainer .container span:nth-of-type(1) {
-  filter: blur(5px);
-}
-
-.closePopupContainer .container span:nth-of-type(2) {
-  filter: blur(10px);
-}
-
-.closePopupContainer .container span:nth-of-type(3) {
-  filter: blur(25px);
-}
-
-.closePopupContainer .container span:nth-of-type(4) {
-  filter: blur(50px);
-}
-
-/* Cercle blanc au centre */
-.closePopupContainer .container::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  bottom: 10px;
-  background-color: #fff;
-  border: solid 2px #ffffff;
-  border-radius: 50%;
-}
-
-/* Crois fixe par-dessus le cercle blanc, en forme de X */
-.closePopupContainer .cross {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  z-index: 1;
-}
-
-.closePopupContainer .cross::before,
-.closePopupContainer .cross::after {
-  content: '';
-  position: absolute;
-  background-color: black;
-}
-
-.closePopupContainer .cross::before {
-  width: 30px;
-  height: 6px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(90deg);
-}
-
-.closePopupContainer .cross::after {
-  width: 30px;
-  height: 6px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-/* Animation rotation */
-@keyframes rotate_3922 {
-  from {
-    transform: translate(-50%, -50%) rotate(0deg);
+    svg {
+      font-size: 1.7rem;
+    }
   }
-  to {
-    transform: translate(-50%, -50%) rotate(360deg);
+
+  button:hover {
+    background: $button-hover-not-active;
+    transition: 0.5s;
   }
 }
+
 
 
 
