--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -253,12 +253,24 @@
   overflow-y: auto;
   text-align: center;
   position: relative;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE et Edge */
+
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
 
   h1 {
     font-family: 'Title', sans-serif;
     color: $nav-title-color;
     font-size: 2.5rem;
     margin-top: 0.5rem;
+  }
+
+  h2 {
+    color: $border-btn-active-color;
+    margin-top: 6rem;
+    margin-bottom: 4rem;
   }
 
   p {
@@ -269,11 +281,25 @@
   }
 }
 
+.socialLinks {
+  margin-top: 2rem;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  a {
+    flex-direction: row;
+    font-size: 3rem;
+    text-decoration: none;
+  }
+}
+
 .additionalImages {
+  border-radius: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 3rem;
 
   .additionalImageCard {
     width: calc(50% - 10px);
@@ -283,6 +309,7 @@
     border-radius: 10px;
     margin-bottom: 30px;
     position: relative;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
 
     .overlay {
       position: absolute;
@@ -300,7 +327,6 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin-top: 3rem;
 
   .mockupRow {
     display: flex;
@@ -312,20 +338,22 @@
       background-size: cover;
       background-position: center;
       border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
     }
   }
 
   .mockupCentered {
     display: flex;
     justify-content: center;
-    margin-bottom: 3rem;
 
     .mockupImage {
       width: 50%;
       height: 300px;
+      margin-top: 2rem;
       background-size: cover;
       background-position: center;
       border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
     }
   }
 }
@@ -334,8 +362,8 @@
   width: 100%;
   max-height: 350px;
   border-radius: 10px;
-  margin-top: 3rem;
   margin-bottom: 3rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
 
   @media (max-width: 768px) {
     max-height: 300px;
@@ -346,24 +374,24 @@
 /* CLOSE BUTTON */
 .closePopup {
   position: absolute;
-  top: 0.6rem;
-  right: 0.6rem;
+  top: 0.8rem;
+  right: 0.8rem;
 
   button {
     color: $nav-title-color;
     background: none;
     border: none;
-    padding: 12px 12px;
+    padding: 8px 10px;
     border-radius: 50px;
     cursor: none;
 
     svg {
-      font-size: 1.7rem;
+      font-size: 1.6rem;
     }
   }
 
   button:hover {
-    background: $button-hover-not-active;
+    border: 2px solid $border-btn-active-color;
     transition: 0.5s;
   }
 }
