--- a/src/styles/components/Hero.module.scss
+++ b/src/styles/components/Hero.module.scss
@@ -2,83 +2,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
 
 .hero {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
   font-family: 'Raleway', sans-serif;
-  margin-top: 35vh;
+  margin-top: 20vh;
+  display: flex;
 
-  .heroImageWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  img {
     width: 100%;
-
-    .heroImage {
-      width: 80%;
-      height: auto;
-      margin-bottom: 20px;
-    }
-  }
-
-  .heroContent {
-    p {
-      color: $text-color;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-  }
-}
-
-.heroImageWrapper .heroImage {
-  position: relative;
-  transition: none;
-  animation: glitch 1s infinite;
-}
-
-@keyframes glitch {
-  0% {
-    clip: rect(100px, 9999px, 100px, 0);
-    transform: skew(0.5deg);
-  }
-  20% {
-    clip: rect(50px, 9999px, 80px, 0);
-    transform: skew(1deg);
-  }
-  40% {
-    clip: rect(10px, 9999px, 70px, 0);
-    transform: skew(-0.5deg);
-  }
-  60% {
-    clip: rect(90px, 9999px, 20px, 0);
-    transform: skew(0.2deg);
+    max-height: 700px;
+    margin-top: -5%;
   }
 }
 
 
 
-/* responsive */
 @media (max-width: 768px) {
-  .heroImageWrapper {
-    margin-top: 12%;
-  }
-
-  .welcome {
-    margin-bottom: -40%;
-  }
-}
-
-@media (max-width: 480px) {
-  .heroImageWrapper {
-    margin-top: 25%;
-  }
-
-  .welcome {
-    margin-bottom: -40%;
+  .heroContent {
+    img{
+      width: 100%;
+      max-height: 100vh;
+    }
   }
 }
+
 
 
 
