--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -5,6 +5,7 @@
   src: url('/fonts/Nectarine DEMO.ttf') format('truetype');
 }
 
+
 .projects {
   font-family: 'Raleway', sans-serif;
   width: 100%;
@@ -136,6 +137,8 @@
   }
 }
 
+
+/* CARDS */
 .bigCard {
   position: relative;
   width: 370px;
@@ -229,6 +232,8 @@
   transform: translate(-50%, -50%) scale(2);
 }
 
+
+/* TAGS */
 .projectTag {
   position: absolute;
   bottom: 10px;
@@ -239,8 +244,16 @@
   padding: 6px 10px;
   font-size: 1rem;
   border-radius: 15px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
+.littleCard:hover .projectTag {
+  opacity: 1;
+}
+
+
+/* DISCOVER BTN */
 .buttonSvg {
   position: absolute;
   width: 300px;
@@ -264,171 +277,7 @@
 }
 
 
-/* POP-UP */
-.popupOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.614);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-}
 
-.popupContent {
-  background: $nav-bg-color;
-  border-radius: 10px;
-  padding: 20px;
-  max-width: 800px;
-  max-height: 90vh;
-  overflow-y: auto;
-  text-align: center;
-  position: relative;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE et Edge */
-
-  &::-webkit-scrollbar {
-    display: none; /* Chrome, Safari, Opera */
-  }
-
-  h1 {
-    font-family: 'Title', sans-serif;
-    color: $nav-title-color;
-    font-size: 2.5rem;
-    margin-top: 0.5rem;
-  }
-
-  h2 {
-    color: $border-btn-active-color;
-    margin-top: 5rem;
-    margin-bottom: 4rem;
-  }
-
-  p {
-    color: $text-color;
-    text-align: justify;
-    line-height: 1.6;
-  }
-}
-
-.socialLinks {
-  margin-top: 2rem;
-  list-style: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-
-  a {
-    color: $nav-title-color;
-    flex-direction: row;
-    font-size: 3rem;
-    text-decoration: none;
-  }
-}
-
-.additionalImages {
-  border-radius: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  .additionalImageCard {
-    width: calc(50% - 10px);
-    height: 250px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    position: relative;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
-      border-radius: 10px;
-    }
-  }
-}
-
-.mockups {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-
-  .mockupRow {
-    display: flex;
-    justify-content: space-evenly;
-
-    .mockupImage {
-      width: calc(25% - 0px);
-      height: 350px;
-      background-size: cover;
-      background-position: center;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
-    }
-  }
-
-  .mockupCentered {
-    display: flex;
-    justify-content: center;
-
-    .mockupImage {
-      width: 50%;
-      height: 300px;
-      margin-top: 2rem;
-      background-size: cover;
-      background-position: center;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
-    }
-  }
-}
-
-.videoPlayer {
-  width: 100%;
-  max-height: 350px;
-  border-radius: 10px;
-  margin-bottom: 3rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.377);
-
-  @media (max-width: 768px) {
-    max-height: 300px;
-  }
-}
-
-
-/* CLOSE BUTTON */
-.closePopup {
-  position: absolute;
-  top: 0.8rem;
-  right: 0.8rem;
-
-  button {
-    color: $nav-title-color;
-    background: none;
-    border: none;
-    padding: 8px 10px;
-    border-radius: 50px;
-    cursor: none;
-
-    svg {
-      font-size: 1.6rem;
-    }
-  }
-
-  button:hover {
-    border: 2px solid $border-btn-active-color;
-    transition: 0.5s;
-  }
-}
 
 
 
