--- a/src/styles/components/Hero.module.scss
+++ b/src/styles/components/Hero.module.scss
@@ -5,24 +5,33 @@
   font-family: 'Raleway', sans-serif;
   margin-top: 20vh;
   display: flex;
+  justify-content: center;
+  align-items: center;
 
   img {
     width: 100%;
+    height: auto;
+    max-width: 1200px;
     max-height: 700px;
+    object-fit: contain;
     margin-top: -5%;
-  }
-}
 
+    @media (max-width: 1023px) {
+      max-height: 750px;
+      margin-top: 4%;
+    }
 
+    @media (max-width: 768px) {
+      max-height: 700px;
+    }
 
-@media (max-width: 768px) {
-  .heroContent {
-    img{
-      width: 100%;
-      max-height: 100vh;
+    @media (max-width: 480px) {
+      max-height: 400px;
+      margin-top: 15%;
     }
   }
 }
+
 
 
 
