--- a/src/styles/components/Projects.module.scss
+++ b/src/styles/components/Projects.module.scss
@@ -19,6 +19,11 @@
   color: $nav-title-color;
   margin-bottom: -2rem;
   text-align: center;
+
+  @media (max-width: 480px) {
+    font-size: 4rem;
+    text-align: center;
+  }
 }
 
 .projectLine {
